--- a/.github/workflows/multi-platform.yml
+++ b/.github/workflows/multi-platform.yml
@@ -40,4 +40,30 @@ jobs:
           name: Geode Build
           path: ${{ steps.build.outputs.build-output }}
 
+      - name: Download artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: ${{ github.workspace }}/bin
+          merge-multiple: true
+
+      - name: Get latest release tag
+        id: get_latest_release
+        run: echo ::set-output name=tag::$(curl -s https://api.github.com/repos/Prevter/OpenHack/releases/latest | jq -r .tag_name)
+
+      - name: Create nightly release
+        uses: andelf/nightly-release@main
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: nightly
+          name: 'Development Release'
+          body: |
+            This is a nightly build of GDH for commit ${{ github.sha }}. 
+            You can use this build to test the latest features and changes.
+
+            ## Note:
+            
+            Since this is based of the latest commit, this may not be stable and may contain bugs and issues.
+          files: |
+            ${{ github.workspace }}/bin/tobyadd.gdh.geode
           
